# AutoChair

./: Architecture_mindmap.mm.md  CMakeLists.txt  README.md
WheelChailrController/: DogControl.ino  LegConfig.ino  MoveFunc.ino
config/: config.h
include/: Camera.h  CentralSystem.h  DogStatus.h  Lidar.h  MotorControlSystem.h  Node.h  VisualOdometry.h  common_header.h
lib/: CMakeLists.txt
lib/sdk/: CMakeLists.txt
lib/sdk/src/hal/: event.h
src/: Camera.cpp  CentralSystem.cpp  DogStatus.cpp  Lidar.cpp  MotorControlSystem.cpp  VisualOdometry.cpp  main.cpp
test_codes/: CMakeLists.txt  Visual_odometry.cpp  calibration.cpp  image_capture_program.cpp
test_codes/BA/: bundle_adjustment.cpp  bundle_adjustment.hpp  bundle_adjustment_inc.cpp
test_codes/LiDAR_pose/: CMakeLists.txt  config.h  icp.h  main.cpp
